# GraphicalActivationProbes

./: .gitignore  BUGS.md  CLAUDE.md  NOTES.md  README.md  SPEC.md  pyproject.toml  requirements.txt  test_debug.py
examples/: compare_topics.py  synthetic_topic.py
log/: README.md
notebooks/: 01_Conditional_Features.ipynb
src/: data.py  glasso.py  main.py  model.py  s_glasso.py  synthetic_data.py
test_results/: test.dot  test_graph
tests/: conftest.py  test_data.py  test_glasso.py  test_model.py  test_sentiment_comparison.py
